# qs

./: .gitignore  LICENSE  README.md  implementation_plan.md  manifest.yaml  pyproject.toml  verify_phase6_proof.py
docs/: ACCEPTANCE.md  API_CONTRACTS.md  ARCHITECTURE.md  AR_MEMBER_MODEL.md  COST_OPTIMIZATION.md  INTEGRATION.md  RUNBOOK.md  runtime_integration_contract.md  zero_luka_bridge_delivery_contract.md
examples/: acceptance_pass.json  extract_pdf_missing_scale.json  intake_prepare.json  request.json
ops/: com.0luka.universal-qs-api.plist  com.0luka.universal-qs-api.plist.template  module_registry_entry.json
plugins/: 0luka_plugin.yaml
review/: QS_V2_EXPORT_PACKAGE_SLICE_SEAL.md  QS_V2_LANE_DISPOSITION.md  QS_V2_MATERIALIZED_HANDOFF_SLICE_SEAL.md  QS_V2_MILESTONE_CLOSEOUT.md  QS_V2_OPERATOR_PREP_SLICE_SEAL.md  QS_V2_PAUSE_SEAL_NOTE.md  QS_V2_RELEASE_CANDIDATE.md  QS_V2_VERTICAL_SLICE_SEAL.md
tests/: dxf_fixture.py  test_authoring_flow.py  test_boq_extractor_v2.py  test_bundle_manifest_v2.py  test_cli.py  test_consistency_check_v2.py  test_continuity_adapters_v2.py  test_cost_estimate_v2.py  test_discipline_aggregation.py  test_export_package_index_v2.py  test_export_profile_v2.py  test_extractor_dxf.py  test_extractor_pdf.py  test_handoff_review_v2.py  test_handoff_writer_v2.py  test_job_context_schema.py  test_job_contracts.py  test_job_output_schema.py  test_job_registry.py  test_optimizer.py  test_pipeline.py  test_po_generate_v2.py  test_qs_v2_export_package_slice.py  test_qs_v2_lane_disposition_inventory.py  test_qs_v2_materialized_handoff_slice.py  (+18 more)
(+78 files in other folders)
